# ompi

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  NEWS  README  README.md  VERSION  configure.ac
.ci/lanl/: gitlab-darwin-ci.yml
.github/: issue_template.md
.github/workflows/: hdf5-tests.yaml  ompi_mpi4py.yaml
MPI_Standard/: gen_wrappers_mpifh.py  init_mpistd.sh
config/: ompi_check_ucx.m4  ompi_config_files.m4  ompi_configure_options.m4  ompi_setup_mpi_fortran.m4  ompi_setup_prrte.m4  opal_check_ze.m4  opal_configure_options.m4
docs/: Makefile.am
docs/man-openmpi/man3/: index.rst
examples/: hello_c.c  ring_c.c
ompi/: Makefile.am
ompi/attribute/: attribute.c  attribute.h  attribute_predefined.c
ompi/communicator/: comm.c  comm_cid.c  comm_init.c  communicator.h
ompi/communicator/ft/: comm_ft.c  comm_ft_detector.c  comm_ft_propagator.c  comm_ft_reliable_bcast.c  comm_ft_revoke.c
ompi/datatype/: ompi_datatype.h  ompi_datatype_module.c
ompi/dpm/: dpm.c
ompi/errhandler/: errcode.c  errhandler.c  errhandler.h  errhandler_predefined.c
ompi/group/: group.c  group.h  group_init.c
ompi/include/: mpi.h.in
ompi/info/: info.c  info.h
ompi/instance/: instance.c
ompi/mca/coll/base/: coll_base_comm_select.c
ompi/mca/coll/ftagree/: coll_ftagree_earlyreturning.c
ompi/mca/coll/han/: coll_han_dynamic.c  coll_han_gatherv.c  coll_han_scatterv.c
ompi/mca/coll/hcoll/: coll_hcoll_module.c
ompi/mca/coll/inter/: coll_inter_scatterv.c
ompi/mca/coll/portals4/: coll_portals4_allreduce.c  coll_portals4_barrier.c  coll_portals4_bcast.c  coll_portals4_gather.c  coll_portals4_reduce.c  coll_portals4_scatter.c
ompi/mca/coll/sm/: coll_sm_module.c
ompi/mca/coll/ucc/: coll_ucc_allgatherv.c
ompi/mca/fcoll/two_phase/: fcoll_two_phase_support_fns.c
ompi/mca/io/ompio/: io_ompio.c
ompi/mca/mtl/ofi/: mtl_ofi.h  mtl_ofi_component.c  mtl_ofi_types.h
ompi/mca/osc/base/: base.h
ompi/mca/osc/portals4/: osc_portals4_component.c
ompi/mca/osc/rdma/: osc_rdma.h  osc_rdma_active_target.c  osc_rdma_comm.c  osc_rdma_component.c  osc_rdma_module.c
ompi/mca/osc/sm/: osc_sm_component.c
ompi/mca/osc/ucx/: osc_ucx_component.c
ompi/mca/part/base/: part_base_frame.c
ompi/mca/pml/base/: pml_base_select.c
ompi/mca/pml/cm/: pml_cm_component.c
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_component.c  pml_ob1_irecv.c  pml_ob1_isend.c  pml_ob1_recvfrag.c  pml_ob1_recvfrag.h  pml_ob1_recvreq.c  pml_ob1_recvreq.h  pml_ob1_sendreq.c  pml_ob1_sendreq.h
ompi/mca/pml/ucx/: pml_ucx.c  pml_ucx.h  pml_ucx_component.c  pml_ucx_request.c  pml_ucx_request.h
ompi/mca/sharedfp/sm/: sharedfp_sm.c  sharedfp_sm_file_open.c
ompi/mca/topo/: topo.h
ompi/mca/topo/base/: topo_base_comm_select.c
ompi/mca/vprotocol/pessimist/: vprotocol_pessimist_sender_based.c
ompi/mpi/bindings/ompi_bindings/: c.py  c_type.py  consts.py  fortran.py  fortran_type.py
ompi/mpi/c/: Makefile.am  allgatherv.c  buffer_attach.c.in  buffer_detach.c.in  cart_create_from_group.c  comm_create_errhandler.c  comm_create_from_group.c  comm_get_errhandler.c  comm_get_info.c  errhandler_f2c.c  errhandler_free.c  file_create_errhandler.c  file_get_errhandler.c  file_get_info.c  file_open_from_group.c  graph_create_from_group.c  info_create.c  info_delete.c  info_dup.c  info_f2c.c  info_free.c  info_get.c  info_get_nkeys.c  info_get_valuelen.c  info_set.c  initialized.c  intercomm_create.c  intercomm_create_from_groups.c  intercomm_merge.c  isendrecv_replace.c.in  raccumulate.c.in  session_create_errhandler.c  session_create_keyval.c  session_delete_attr.c  session_free_keyval.c  session_get_attr.c  session_get_info.c  session_init.c  session_set_attr.c  type_get_extent.c.in  (+10 more)
ompi/mpi/c/profile/: Makefile.am
ompi/mpi/fortran/: configure-fortran-output.h.in
ompi/mpi/fortran/mpif-h/: Makefile.am  comm_create_errhandler_f.c  comm_create_from_group_f.c  intercomm_create_from_groups_f.c  prototypes_mpi.h  win_create_errhandler_f.c
ompi/mpi/fortran/use-mpi-f08/: Makefile.am  Makefile.prototype_files  abort.c.in  add_error_class.c.in  add_error_code.c.in  add_error_string.c.in  aint_add.c.in  aint_diff.c.in  alloc_mem.c.in  alloc_mem_cptr.c.in  barrier.c.in  barrier_init.c.in  cancel.c.in  cart_coords.c.in  cart_create.c.in  cart_get.c.in  cart_map.c.in  cart_rank.c.in  cart_shift.c.in  cartdim_get.c.in  close_port.c.in  comm_accept.c.in  comm_call_errhandler.c.in  comm_compare.c.in  comm_connect.c.in  comm_create.c.in  comm_create_errhandler.c.in  comm_create_from_group.c.in  comm_create_group.c.in  comm_create_keyval.c.in  comm_delete_attr.c.in  comm_disconnect.c.in  comm_dup.c.in  comm_dup_with_info.c.in  comm_free.c.in  comm_free_keyval.c.in  comm_get_attr.c.in  comm_get_errhandler.c.in  comm_get_info.c.in  comm_get_name.c.in  (+181 more)
ompi/mpi/fortran/use-mpi-f08/base/: bigcount.h  ompi_type_get_contents_f_c.c
ompi/mpi/fortran/use-mpi-f08/bindings/: mpi-f-interfaces-bind.h  mpi-f-interfaces-bind.h.in
ompi/mpi/fortran/use-mpi-f08/mod/: mpi-f08-interfaces.F90  mpi-f08-interfaces.h.in  mpi-f08-rename.h  mpi-f08-types.F90  pmpi-f08-interfaces.F90
ompi/mpi/fortran/use-mpi-ignore-tkr/: mpi-ignore-tkr-interfaces.h.in  pmpi-ignore-tkr-interfaces.h
ompi/mpi/fortran/use-mpi-tkr/: mpi-f90-interfaces.h  pmpi-f90-interfaces.h
ompi/mpi/man/man3/: Makefile.am
ompi/op/: op.c  op.h
ompi/proc/: proc.c
ompi/request/: request.h
ompi/runtime/: ompi_cr.c  ompi_mpi_abort.c  ompi_mpi_finalize.c  ompi_mpi_init.c  ompi_mpi_params.c  ompi_rte.c  params.h
ompi/tools/mpirun/: Makefile.am
ompi/util/: count_disp_array.h
ompi/win/: win.c  win.h
opal/class/: opal_object.h
opal/datatype/: opal_convertor.c
opal/mca/accelerator/base/: accelerator_base_frame.c  (+1 more)
opal/mca/base/: mca_base_var.c  mca_base_var_enum.c  mca_base_var_enum.h  mca_base_var_group.h
opal/mca/pmix/: pmix-internal.h
opal/runtime/: opal_finalize.c  opal_info_support.c  opal_init.c  opal_params_core.c  opal_params_core.h
opal/tools/wrappers/: opal_wrapper.c
opal/util/: keyval_parse.c  path.c  proc.h
opal/util/keyval/: keyval_lex.h  keyval_lex.l
(+14 files in other folders)
